--- a/videos/styles.css
+++ b/videos/styles.css
@@ -123,7 +123,7 @@ body {
 
 #player {
     width: 100%;
-    height: 73.5vh;
+    height: 73.4vh;
     border: none;
     border-radius: 20px;
     position: relative;
@@ -132,16 +132,15 @@ body {
 
 .video-title-container {
     margin-top: 40px;
-    font-size: 30px;
+    font-size: 25px;
     font-family: fantasy;
-    color: #ffffff;
+    color: #fdfdfdd2;
     text-align: center;
-    max-width: 50%;
+    max-width: 100%;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     font-family: fantasy;
-    font-weight: bold;
 }
 
 .video-list-container {
@@ -153,6 +152,7 @@ body {
     -ms-overflow-style: none;  /* Ocultar scrollbar en Internet Explorer y Edge */
     position: relative;
     margin-top: 3.3%;
+    height: 76vh;
 }
 
 .video-list-container::-webkit-scrollbar {
@@ -208,10 +208,10 @@ body {
     display: block;
     width: 100%;
     padding: 10px;
-    background-color: #282828;
+    background: linear-gradient(10deg, #00ff9d, #ff5e00);
     color: #ffffff;
     border: none;
-    border-radius: 5px;
+    border-radius:5px;
     cursor: pointer;
     text-align: center;
     font-size: 16px;
@@ -222,7 +222,7 @@ body {
 }
 
 .show-more-button:hover {
-    background-color: #555;
+    background-color: #ff000000;
 }
 
 .toggle-list-button {
